<resources>
    <string name="app_name">GithubRepositoryDetails</string>

    <string name="image_desc">Image</string>
    <string name="repository_name">Repository Name</string>
    <string name="repository_language">Repository Language</string>
    <string name="forks">Forks</string>
    <string name="issues">Issues</string>
    <string name="starredby">Starred bys</string>
    <string name="internet_connection">Internet Connection Not Available</string>
</resources>