<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/rel_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_repository_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/image_desc"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_repository_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_repository_logo"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_repository_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_repository_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/lin_fork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_repository_language"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tv_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/forks"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_forks_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_fork"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tv_issues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/issues"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_issues_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_starredby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_issues"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/tv_starredby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/starredby"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_starredby_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_internet"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/tv_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/internet_connection"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>